// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatMollieErrorResponse should return Bad request when error's status is 400 1`] = `
Object {
  "code": "SyntaxError",
  "extensionExtraInfo": Object {
    "field": "amount.value",
    "links": Object {
      "documentation": Object {
        "href": "https://docs.mollie.com/overview/handling-errors",
        "type": "text/html",
      },
    },
    "title": "Bad Request",
  },
  "message": "Request formatted incorrectly or missing information",
}
`;

exports[`formatMollieErrorResponse should return Forbidden when error's status is 403 or 4O1 1`] = `
Object {
  "code": "Unauthorized",
  "extensionExtraInfo": Object {
    "field": undefined,
    "links": Object {
      "documentation": Object {
        "href": "https://docs.mollie.com/overview/authentication",
        "type": "text/html",
      },
    },
    "title": "Unauthorized Request",
  },
  "message": "Forbidden or Unauthorized - Request to Mollie API failed",
}
`;

exports[`formatMollieErrorResponse should return General error when the error's status is greater or equal to 500 1`] = `
Object {
  "code": "General",
  "extensionExtraInfo": Object {
    "field": "",
    "links": Object {
      "documentation": Object {
        "href": "https://docs.mollie.com/overview/handling-errors",
        "type": "text/html",
      },
    },
    "title": "Server Error",
  },
  "message": "Server Error. Please see logs for more details",
}
`;

exports[`formatMollieErrorResponse should return a general 4xx error when the error's status is 4xx, but not 400, 401 or 403 1`] = `
Object {
  "code": "SyntaxError",
  "extensionExtraInfo": Object {
    "field": "amount.value",
    "links": Object {
      "documentation": Object {
        "href": "https://docs.mollie.com/overview/handling-errors",
        "type": "text/html",
      },
    },
    "title": "Unprocessable Entity",
  },
  "message": "Request error - 422 code returned from Mollie",
}
`;

exports[`formatMollieErrorResponse should return a general 4xx error when the error's status is 4xx, but not 400, 401 or 403 2`] = `
Object {
  "code": "SyntaxError",
  "extensionExtraInfo": Object {
    "field": "amount.value",
    "links": Object {
      "documentation": Object {
        "href": "https://docs.mollie.com/overview/handling-errors",
        "type": "text/html",
      },
    },
    "title": "Payment Required",
  },
  "message": "Request error - 402 code returned from Mollie",
}
`;
